--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,75 @@
+body {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  font-family: 'Lato';
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.panel {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#banner {
+  height: 100vh;
+] color: #333;
 }
 
-.App-link {
-  color: #61dafb;
+#banner h1 {
+  font-size: 5.5em;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+  letter-spacing: -2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#banner h2 {
+  font-size: 1.4em;
+  letter-spacing: 2px;
+}
+
+#banner img {
+  margin-top: 100px;
+  width: 425px;
+}
+
+#work-link {
+  margin-top: 100px;
+}
+
+#work-link a {
+  color: #444;
+  font-size: 1.5em;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: inline-block;
+  width: auto;
+}
+
+#work-link #link-arrow {
+  border: 1px solid #333;
+  border-radius: 40px;
+  padding: 10px 15px;
+  margin-left: 10px;
+  font-size: 1.1em;
+  transition: background-color .5s;
+}
+
+#work-link a:hover + #link-arrow {
+  background-color: #2d74e5;
+  color: #fff;
+  border: 1px solid #6999e5;
+  text-decoration: none;
+}
+
+#work-link #link-arrow:hover {
+  background-color: #2d74e5;
+  color: #fff;
+  border: 1px solid #6999e5;
+  text-decoration: none;
 }
