--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: 'Lato';
+  background-color: #fff;
+  color: #fff;
 }
 
 .App {
   text-align: center;
-  font-family: 'Lato';
-}
-
-.panel {
-  margin: 0;
-  padding: 0;
-  width: 100%;
   height: 100%;
 }
 
 #banner {
-  height: 100vh;
+  background-color: #fff;
   color: #333;
+  width: 100%;
 }
 
 #banner h1 {
-  font-size: 5.5em;
+  font-size: 3em;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 0;
@@ -35,155 +28,119 @@ body {
 }
 
 #banner h2 {
-  font-size: 1.4em;
+  font-size: 1.2em;
   letter-spacing: 2px;
 }
 
 #banner img {
-  margin-top: 100px;
-  width: 425px;
+  width: 200px;
+  margin-top: 150px;
 }
 
-#work-link {
-  margin-top: 100px;
-}
-
-#work-link a {
-  color: #444;
-  font-size: 1.5em;
-  letter-spacing: 1px;
-  text-decoration: none;
-  display: inline-block;
-  width: auto;
-}
-
-#work-link #link-arrow {
-  border: 1px solid #333;
-  border-radius: 40px;
-  padding: 10px 15px;
-  margin-left: 10px;
-  font-size: 1.1em;
-  transition: background-color .5s;
-}
-
-#work-link a:hover + #link-arrow {
-  background-color: #2d74e5;
-  color: #fff;
-  border: 1px solid #6999e5;
-  text-decoration: none;
-}
-
-#work-link #link-arrow:hover {
-  background-color: #2d74e5;
-  color: #fff;
-  border: 1px solid #6999e5;
-  text-decoration: none;
+.panel {
+  height: 100%;
+  min-height: 700px;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .project-main {
-  background-color: #10244b;
-  color: #fff;
-  width: 66%;
   height: 100vh;
-  margin: 0;
-  display: inline-block;
+  min-height: 700px;
+  background-color: #10244b;
 }
 
-.project-main-image{
-  height: 65%;
-  overflow: hidden;
+.project-main-image {
+  min-height: 300px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left top;
   background-attachment: fixed;
 }
 
-.project-title h1{
-  text-transform: uppercase;
-  font-weight: 300;
-  border: 1px solid #fff;
-  letter-spacing: 2px;
-  padding: 10px 0;
-  margin-top: -30px;
-  background-color: #10244b;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
+.project-main-text {
+  min-height: 400px;
+  text-align: center;
+  padding: 0 5%;
 }
 
-.project-main-text {
- height: 35%;
+.project-main-text h1 {
+  margin-top: -30px;
+  padding: 10px 25px;
+  border: 1px solid;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 300;
+  background-color: #10244b;
 }
 
 .project-main-text p {
   text-align: left;
-  margin: 0 8%;
-  line-height: 1.4em;
-  font-size: .9em;
-  font-weight: 400;
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
 
-.project-main-text .tech-used {
-  margin: 3px 8% 12px 8%;
-}
-
-.project-main-text h3 {
-  font-weight: 400;
+.project-main-text h2 {
   text-align: left;
-  padding-top: 15px;
-  margin: 0 8%;
+  font-size: 1.2em;
+  margin: 0;
 }
 
 .project-sidebar {
-  width: 34%;
   height: 100vh;
+  min-height: 700px;
   background-color: #071124;
-  display: inline-block;
-  border-left: 1px solid #fff;
-  border-top: 1px solid #fff;
-  box-sizing: border-box;
-  float: right;
-  color: #fff;
 }
 
-.project-sidebar h1{
-  font-size: 1.3em;
-  margin-top: 40px;
-  text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: 2px;
-}
+@media only screen and (min-width: 1000px) {
 
-.project-sidebar p {
-  margin: 0 12% 45px 12%;
-}
-.call-to-action {
-  background-color: #4286f4;
-  padding: 14px 35px;
-  font-weight: 700;
-  font-size: 1.5em;
-  color: #fff;
-  text-decoration: none;
-}
+  .break {
+    display: none;
+  }
+  
+  .panel {
+    flex-flow: row wrap;
+    height: 100vh;
+  }
 
-.placeholder-widget {
-  background-color: #ccc;
-  border-radius: 3px;
-  box-shadow: -3px 10px 10px rgba(0,0,0,.7);
-  height: 420px;
-  width: 74%;
-  margin: 30px auto;
-}
-
-@media only screen and (max-width: 900px) {
   .project-main {
-    display: block;
-    width: 100%;
+    flex: 2;
+    box-sizing: border-box;
+  }
+
+  .project-main-image {
+    height: 65%;
+  }
+
+  .project-main-text {
+    min-height: 200px;
+    max-height: 100px;
   }
 
   .project-sidebar {
-    display: block;
-    float: none;
-    width: 100%;
+    flex: 1;
+    border-left: 1px solid #fff;
+    border-top: 1px solid #fff;
+    box-sizing: border-box;
   }
+
+  #banner img {
+    width: 350px;
+    margin-top: 90px;
+  }
+
+  #banner h1 {
+    font-size: 5.5em;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 0;
+    letter-spacing: -2px;
+  }
+
+  #banner h2 {
+    font-size: 1.4em;
+    letter-spacing: 2px;
+  }
+
 }
