--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,42 @@ body {
   margin-top: 150px;
 }
 
+#work-link {
+  margin-top: 200px;
+}
+
+#work-link a {
+  color: #444;
+  font-size: 1.5em;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: inline-block;
+  width: auto;
+}
+
+#work-link #link-arrow {
+  border: 1px solid #333;
+  border-radius: 40px;
+  padding: 10px 15px;
+  margin-left: 10px;
+  font-size: 1.1em;
+  transition: background-color .5s;
+}
+
+#work-link a:hover + #link-arrow {
+  background-color: #2d74e5;
+  color: #fff;
+  border: 1px solid #6999e5;
+  text-decoration: none;
+}
+
+#work-link #link-arrow:hover {
+  background-color: #2d74e5;
+  color: #fff;
+  border: 1px solid #6999e5;
+  text-decoration: none;
+}
+
 .panel {
   height: 100%;
   min-height: 700px;
@@ -93,6 +129,36 @@ body {
   background-color: #071124;
 }
 
+.project-sidebar h1{
+  font-size: 1.3em;
+  margin-top: 40px;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+.project-sidebar p {
+  margin: 0 12% 45px 12%;
+}
+.call-to-action {
+  background-color: #4286f4;
+  padding: 10px 28px;
+  font-weight: 700;
+  font-size: 1.3em;
+  color: #fff;
+  text-decoration: none;
+}
+
+.placeholder-widget {
+  background-color: #ccc;
+  border-radius: 3px;
+  box-shadow: -3px 10px 10px rgba(0,0,0,.7);
+  height: 380px;
+  width: 380px;
+  max-width: 80%;
+  margin: 30px auto;
+}
+
 @media only screen and (min-width: 1000px) {
 
   .break {
@@ -127,7 +193,7 @@ body {
 
   #banner img {
     width: 350px;
-    margin-top: 90px;
+    margin-top: 110px;
   }
 
   #banner h1 {
@@ -141,6 +207,10 @@ body {
   #banner h2 {
     font-size: 1.4em;
     letter-spacing: 2px;
+  }
+
+  #work-link {
+    margin-top: 100px;
   }
 
 }
